src/plugins/platforms/cocoa/qnsview.h
@@ -83,6 +83,7 @@ QT_END_NAMESPACE
 - (BOOL)isFlipped;
 - (BOOL)acceptsFirstResponder;
 - (BOOL)becomeFirstResponder;
+- (BOOL)hasMask;
 
 - (void)resetMouseButtons;
 
